<resources>
    <string name="app_name">KGarage</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="lb_welcome">CHÀO MỪNG BẠN ĐẾN VỚI K-GARAGE</string>
    <string name="prompt_email">Email/Phone</string>
    <string name="prompt_password">Mật khẩu</string>
    <string name="action_sign_in_short">Đăng nhập</string>
    <string name="lb_for_got_password">Quên mật khẩu</string>
    <string name="action_sign_in">ĐĂNG NHẬP</string>
    <string name="str_msg_network_fail">Vui lòng kiểm tra kết nối mạng</string>

    //setting fragment
    <string name="str_setting_title">Thông tin cá nhân</string>
    <string name="str_logout">Đăng xuất</string>
    <string name="str_local">Địa chỉ:</string>
    <string name="str_hotline">Hotline:</string>
    <string name="str_date_create">Năm thành lập:</string>
    <string name="str_confirm_logout">Bạn thực sự muốn đăng xuất?</string>
    <string name="title_activity_maps">Map</string>
    <string name="gps_network_not_enabled">Bạn cần bật GPS</string>
    <string name="dialog_notice">Chú ý</string>
    <string name="open_location_settings">Cài đặt</string>
    <string name="close_location_settings">Thoát</string>


    // notice
    <string name="str_customer_type_new">Khách hàng mới</string>
    <string name="string_don_hang">Đơn hàng: </string>
    <string name="string_car_type">Loại Xe: </string>
    <string name="string_car_number">Biển số:</string>
    <string name="string_car_error">LỖI CỦA XE</string>

    //note
    <string name="str_note_title">Thông Báo</string>

    //garage
    <string name="str_garage_title">Xe trong Garage</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
