<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/shape_background"
    tools:context=".view.login.LoginActivity">

    <LinearLayout
        android:id="@+id/layout_login"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_marginTop="200dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lb_welcome"
            android:textSize="@dimen/txt_normal"
            android:gravity="center"
            android:textColor="@android:color/white"/>

        <LinearLayout
            android:id="@+id/email_login_form"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="@dimen/padding_logo_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:id="@+id/email"
                android:drawablePadding="8dp"
                android:padding="10dp"
                android:gravity="center_vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_email"
                android:text=""
                android:textSize="@dimen/txt_normal"
                android:background="@android:color/white"
                android:drawableLeft="@drawable/ic_email_login"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:singleLine="true" />

            <EditText
                android:id="@+id/password"
                android:drawablePadding="8dp"
                android:padding="10dp"
                android:layout_marginTop="10dp"
                android:textSize="@dimen/txt_normal"
                android:gravity="center_vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/white"
                android:hint="@string/prompt_password"
                android:text="123456"
                android:imeActionId="6"
                android:imeActionLabel="@string/action_sign_in_short"
                android:imeOptions="actionUnspecified"
                android:inputType="textPassword"
                android:drawableLeft="@drawable/ic_password"
                android:maxLines="1"
                android:singleLine="true" />

            <!-- </android.support.design.widget.TextInputLayout>-->

            <RelativeLayout
                android:id="@+id/layout_forgotPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/txt_forGotPassWord"
                    android:text="@string/lb_for_got_password"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/txt_link"
                    android:layout_marginTop="10dp"
                    android:layout_alignParentRight="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

            </RelativeLayout>

            <Button
                android:id="@+id/btn_login"
                style="?android:textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/txt_normal"
                android:clickable="true"
                android:background="@drawable/ripple"
                android:layout_marginTop="16dp"
                android:text="@string/action_sign_in"
                android:textColor="@android:color/white"
                android:textStyle="bold" />

        </LinearLayout>
    </LinearLayout>
    <ProgressBar
        android:id="@+id/progress"
        android:layout_centerInParent="true"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
</RelativeLayout>